addded drop duplicated method

--- a/notebooks/data-cleaning.ipynb
+++ b/notebooks/data-cleaning.ipynb
@@ -1923,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "28b37f7a",
    "metadata": {},
    "outputs": [],
@@ -1932,6 +1932,7 @@
     "    return (\n",
     "        df\n",
     "        .drop(index=[6474])\n",
+    "        .drop_duplicates()\n",
     "        .assign(**{\n",
     "            col: df[col].str.strip()\n",
     "            for col in df.select_dtypes(include=\"O\").columns\n",
